RESOLVED FIXED70286
Incorrect behavior from String match/search & undefined pattern
https://bugs.webkit.org/show_bug.cgi?id=70286
Summary Incorrect behavior from String match/search & undefined pattern
Gavin Barraclough
Reported 2011-10-17 16:46:23 PDT
If the regexp argument passed to match or search is undefined, the RegExp constructor should produce a RegExp that matches "", not "undefined".
Attachments
Gavin Barraclough
Comment 1 2011-10-17 16:48:29 PDT
Fixed in r97673
Note You need to log in before you can comment on or make changes to this bug.