Incorrect behavior from String match/search & undefined pattern https://bugs.webkit.org/show_bug.cgi?id=70286

Reviewed by Sam weinig.

Source/JavaScriptCore:

* runtime/StringPrototype.cpp:
(JSC::stringProtoFuncMatch):
    - In case of undefined, pattern is "".
(JSC::stringProtoFuncSearch):
    - In case of undefined, pattern is "".

LayoutTests:

* sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T4-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T6-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T7-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T8-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.10_String.prototype.match/S15.5.4.10_A1_T9-expected.txt:
* sputnik/Conformance/15_Native_Objects/15.5_String/15.5.4/15.5.4.12_String.prototype.search/S15.5.4.12_A1_T4-expected.txt:
    - Check in passing results.



Canonical link: https://commits.webkit.org/86397@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97673 268f45cc-cd09-0410-ab3c-d52691b4dbfc